Tela inicial da cozinha

--- a/src/app/components/dish-list/dish-list.component.html
+++ b/src/app/components/dish-list/dish-list.component.html
@@ -1,23 +1,37 @@
 <!-- src/app/components/dish-list/dish-list.component.html -->
-
-<h2>Dish List</h2>
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Price</th>
-    <th>Actions</th>
-  </tr>
-  <tr *ngFor="let dish of dishes">
-    <td>{{ dish.id }}</td>
-    <td>{{ dish.name }}</td>
-    <td>{{ dish.description }}</td>
-    <td>{{ dish.price }}</td>
-    <td>
-      <button (click)="deleteDish(dish.id!)">Delete</button>
-      <a [routerLink]="['/edit-dish', dish.id]">Edit</a>
-    </td>
-  </tr>
-</table>
-<a routerLink="/add-dish">Add New Dish</a>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Delivery</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="dish-list.component.css">
+</head>
+<body>
+  <div class="header">
+    <h1>Pedidos</h1>
+  </div>
+  
+  <table>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Actions</th>
+    </tr>
+    <tr *ngFor="let dish of dishes">
+      <td>{{ dish.id }}</td>
+      <td>{{ dish.name }}</td>
+      <td>{{ dish.description }}</td>
+      <td>{{ dish.price }}</td>
+      <td>
+        <button (click)="deleteDish(dish.id!)">Delete</button>
+        <a [routerLink]="['/edit-dish', dish.id]">Edit</a>
+      </td>
+    </tr>
+  </table>
+  <a routerLink="/add-dish">Add New Dish</a>
+</body>
+</html>
