Arrumando o tamanho fixo das telas para mobile, arrumando o botao de status e fazendo a tela inicial do gerente.

--- a/src/app/components/dish-list/dish-list.component.css
+++ b/src/app/components/dish-list/dish-list.component.css
@@ -1,90 +1,103 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #d9d9d9;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.cardapio {
+  width: 100%;
+  max-width: 1200px; /* Limita a largura máxima */
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Espaço entre o texto e a imagem */
+  margin-bottom: 20px;
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
+}
+
+.item img {
+  width: 113px;
+  height: 79px;
+  border-radius: 10px;
+  margin-left: 26px;
+}
+
+.info {
+  flex: 1;
+  text-align: left;
+  max-height: 1%;
+}
+
+.info h2 {
+  font-size: 18px;
+  padding-bottom:2px;
+  max-height: 1%; 
+  white-space: nowrap;
   
- 
-  
-  .pedido {
-    background-color: #fff;
-    color: #000;
-    width: 300px;
-    margin: 20px auto;
-    border-radius: 5px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .pedido-id {
-    font-size: 1.2em;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 15px;
-  }
-  
-  .pedido-item {
-    margin-bottom: 10px;
-  }
-  
-  .item-nome {
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .item-quantidade {
-    font-weight: normal;
-  }
-  
-  .item-descricao {
-    font-size: 0.9em;
-    color: #666;
-  }
-  
-  .status-dropdown {
-    text-align: center;
-    margin-top: 15px;
-  }
-  
-  .status-button {
-    background-color: #000;
-    color: #fff;
-    width: 100%;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 1em;
-    position: relative;
-  }
-  
-  .dropdown-icon {
-    margin-left: 10px;
-  }
-  
-  .dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 100%;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    text-align: left;
-  }
-  
-  .status-dropdown:hover .dropdown-menu {
-    display: block;
-  }
-  
-  .dropdown-menu a {
-    color: white;
-    padding: 10px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-menu a:hover {
-    background-color: #555;
-  }
-  
+
+}
+
+.info p {
+  font-size: 14px;
+  color: #706E6E;
+  max-width: 160px; 
+}
+
+.info span {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+}
+
+.actions {
+  margin-left: 10px;
+  display: flex; 
+  align-items: center;
+}
+
+.lapis {
+  width: 23px; /* Ajusta o tamanho do ícone de lápis */
+  height: auto;
+  cursor: pointer;
+  padding-top: 70px;
+}
+
+button:hover {
+  background-color: #ca5507;
+}
+
+.botao {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.botao button {
+  width: 312px;
+  height: 45px;
+  background-color: #ff6600;
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 100px;
+}
+
+.botao button a {
+  color: white;
+  text-decoration: none;
+}
