--- a/src/app/components/cozinha/cozinha.component.css
+++ b/src/app/components/cozinha/cozinha.component.css
@@ -36,13 +36,14 @@ body {
 .pedido-id {
   font-size: 1.2em;
   margin-bottom: 10px;
+  padding-bottom: 1px;
+  align-items: top;
 }
 
 .pedido-item {
   margin-bottom: 10px;
   text-align: left;
   padding-left: 8px;
-  
 }
 
 .item-nome {
@@ -52,48 +53,63 @@ body {
 }
 
 .item-descricao {
+  font-size: 10px;
   font-style: italic;
   color: #706E6e;
   text-align: left;
 }
 
-
-
 .status-dropdown {
   position: relative;
+  width: 262px;
+  max-height: 300px;
+  margin: 0 auto; /* Centraliza o dropdown */
+  text-align: center; 
+  
 }
 
 .status-button {
   background-color: #000; /* Botão dropdown com fundo preto */
   color: #fff;
   border: none;
-  padding: 10px;
-  border-radius: 5px;
+  align-items: center;
   cursor: pointer;
+  width: 238px;
+  height: 30px;
+  margin: 0 auto; /* Centraliza o botão */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dropdown-menu {
   display: none;
   position: absolute;
-  background-color: #444; /* Menu dropdown com fundo um pouco mais claro */
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  border-radius: 5px;
   top: 100%;
   left: 0;
-  z-index: 1000;
-  min-width: 150px;
+  min-width: 9px;
+  margin: 0 auto; /* Centraliza o dropdown */
+  text-align: center; 
 }
 
 .status-dropdown:hover .dropdown-menu {
-  display: block; /* Mostrar o menu dropdown ao passar o mouse */
+  display: block;
+  margin: 0 auto; /* Centraliza o dropdown */
+  text-align: center;  /* Mostrar o menu dropdown ao passar o mouse */
 }
 
 .dropdown-item {
   color: #fff;
-  padding: 8px 16px;
+  text-align: center;
+  align-items: center;
+  padding: 5px 6px ;
+  padding-left: 6px;
   display: block;
   text-decoration: none;
+  width: 238px;
+  height: 30px;
+  margin: 0 auto; /* Centraliza o dropdown */
+  text-align: center; 
 }
 
 .dropdown-item.feito {
@@ -108,18 +124,15 @@ body {
   background-color: green;
 }
 
-.dropdown-item:hover {
-  background-color: #555;
-}
 
-.feitio {
+.FEITO {
   background-color: red;
 }
 
-.enviado {
+.ENVIADO {
   background-color: orange;
 }
 
-.entregue {
+.ENTREGUE {
   background-color: green;
 }
