--- a/src/app/components/cozinha/cozinha.component.html
+++ b/src/app/components/cozinha/cozinha.component.html
@@ -1,4 +1,3 @@
-<!-- src/app/components/dish-list/dish-list.component.html -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,7 +12,6 @@
     <h1>Pedidos</h1>
   </div>
   <div class="container">
-    
     <div *ngFor="let dish of dishes" class="pedido">
       <h2 class="pedido-id">ID - {{ dish.id }}</h2>
       <div class="pedido-item">
@@ -21,15 +19,16 @@
         <p class="item-descricao">{{ dish.description }}</p>
       </div>
       <div class="status-dropdown">
-        <button class="status-button">STATUS <span class="dropdown-icon">▼</span></button>
-        <div class="dropdown-menu">
-          <a href="#" (click)="selectStatus(dish.id, 'FEITO')">FEITO</a>
-          <a href="#" (click)="selectStatus(dish.id, 'ENVIADO P/ ENTREGA')">ENVIADO P/ ENTREGA</a>
-          <a href="#" (click)="selectStatus(dish.id, 'ENTREGUE')">ENTREGUE</a>
+        <button *ngIf="dish.id !== undefined" class="status-button" [ngClass]="getStatusClass(dish.id)" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{ selectedStatus[dish.id] || 'STATUS' }} <span class="dropdown-icon">▼</span>
+        </button>
+        <div *ngIf="dish.id !== undefined" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item feito" href="#" (click)="selectStatus(dish.id, 'FEITO')">FEITO</a>
+          <a class="dropdown-item enviado" href="#" (click)="selectStatus(dish.id, 'ENVIADO P/ ENTREGA')">ENVIADO P/ ENTREGA</a>
+          <a class="dropdown-item entregue" href="#" (click)="selectStatus(dish.id, 'ENTREGUE')">ENTREGUE</a>
         </div>
       </div>
     </div>
   </div>
-  
 </body>
 </html>
