--- a/src/app/components/cozinha/cozinha.component.html
+++ b/src/app/components/cozinha/cozinha.component.html
@@ -1,13 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Delivery</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="cozinha.component.css">
-</head>
-<body>
+<div class="container">
   <div class="header">
     <h1>Pedidos</h1>
   </div>
@@ -30,5 +21,4 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+</div>
