--- a/src/app/components/cardapio/cardapio.component.html
+++ b/src/app/components/cardapio/cardapio.component.html
@@ -15,10 +15,14 @@
       </button>
     </header>
     <div *ngFor="let produto of produtos" class="produto">
-      <h2>{{ produto.name }}</h2>
-      <img [src]="produto.image" alt="{{ produto.name }}" class="produto-imagem" (click)="selectProduct(produto)"/>
-      <p>{{ produto.description }}</p>
-      <p><strong>Preço: R$ {{ produto.price.toFixed(2) }}</strong></p>
+      <div class="texto">
+        <h2>{{ produto.name }}</h2>
+        <p class="produto-description">{{ produto.description }}</p>
+        <p><strong>Preço: R$ {{ produto.price.toFixed(2) }}</strong></p>
+      </div>
+      <div class="imagem">
+        <img [src]="produto.image" alt="{{ produto.name }}" class="produto-imagem" (click)="selectProduct(produto)"/>
+      </div>
     </div>
   </div>
 </body>
