--- a/src/app/components/adicionais/adicionais.component.css
+++ b/src/app/components/adicionais/adicionais.component.css
@@ -1,16 +1,147 @@
 /* adicionais.component.css */
 
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+  width: 100%;
+  max-width: 400px;
+  margin: 20px auto;
+  border-radius: 8px;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.voltar {
+  height: 170px;
+  cursor: pointer; 
+  top: 25%;
+  font-size: 24px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+}
+
+header .voltar {
+  font-size: 24px;
+  margin-right: 16px;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+header h1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-left: 50px;
+}
+
+.produto-info {
+  text-align: center;
+}
+
+.produto-info h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.produto-info img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
+
+.observacao {
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.observacao label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.observacao-textarea {
+  width: 100%;
+  height: 100px;
+  padding: 8px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  resize: none;
+}
+
+.quantidade-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  justify-content: flex-start;
+}
+
+.quantidade-btn {
+  width: 32px;
+  height: 32px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+.quantidade {
+  font-size: 18px;
+  margin: 0 30px;
+}
+
+.adicionar-btn {
+  width: 50%;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #327634;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  margin-left: 50%;
+}
+
+.adicionar-btn:hover {
+  background-color: #2a5a2c;
+}
+
+h1 {
+  text-align: center;
+  font-size: 36px;
+  flex-grow: 1;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.observacao-textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  resize: none;
+  background-color: #C6C2C0;
+}
+
+.observacao-label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
