--- a/src/app/components/adicionais/adicionais.component.html
+++ b/src/app/components/adicionais/adicionais.component.html
@@ -12,11 +12,13 @@
       <button class="voltar" (click)="navigateBack()">&#8592;</button>
       <h1>Adicionais</h1>
     </header>
+    <label for="observacao" class="observacao-label">Observação</label>
+        <textarea id="observacao" class="observacao-textarea" rows="3"></textarea>
     <div *ngIf="produto" class="produto-info">
       <h2 class="produto-nome">{{ produto?.name }}</h2>
       <img [src]="produto?.image" alt="{{ produto?.name }}" class="produto-img">
       <label for="observacao" class="observacao-label">Observação</label>
-      <textarea id="observacao" class="observacao-textarea" rows="3" placeholder="Escreva aqui..."></textarea>
+      <textarea id="observacao" class="observacao-textarea"></textarea>
     </div>
     <div class="quantidade-container">
       <button class="quantidade-btn" (click)="updateQuantity(-1)">-</button>
