--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -33,7 +33,7 @@
                 </label>
             </div>
 
-            <label for="troco">Troco</label>
+            <h4 for="troco">Troco</h4>
             <textarea id="troco" name="troco" placeholder="Insira o valor do troco, se necessário"></textarea>
 
             <button type="submit" class="btn-finalizar">Finalizar compra</button>
