--- a/src/app/components/adicionais/adicionais.component.css
+++ b/src/app/components/adicionais/adicionais.component.css
@@ -2,8 +2,6 @@
 
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
 .container {
@@ -13,19 +11,25 @@ body {
   border-radius: 8px;
   overflow: hidden;
   padding: 20px;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .voltar {
-  height: 170px;
-  cursor: pointer; 
-  top: 25%;
   font-size: 24px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    margin-right: 16px;
+  
 }
 
 header {
   display: flex;
   align-items: center;
-  padding: 16px;
+  justify-content: center; 
+  padding: 16px
 }
 
 header .voltar {
@@ -37,11 +41,11 @@ header .voltar {
 }
 
 header h1 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-  margin-left: 50px;
+  font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+    flex-grow: 1;
 }
 
 .produto-info {
@@ -144,4 +148,14 @@ h1 {
   display: block;
   font-size: 18px;
   margin-bottom: 5px;
+}
+
+.lanche {
+  width: 95%;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 80px;
+  margin-right: 500px;
+  margin-top: 80px;
+
 }
