--- a/src/app/components/sucesso/sucesso.component.css
+++ b/src/app/components/sucesso/sucesso.component.css
@@ -23,17 +23,17 @@ body {
 h1 {
     margin-top: 50px;
     flex: 1;
-    font-size: 28px;
+    font-size: 20px;
     text-align: center;
     font-weight: bold;
     margin-bottom: 80px;
 }
 
 .icon {
-    background-color: #4CAF50;
-    border-radius: 50%;
+    background-color: #187002;
     padding: 60px;
     margin-bottom: 140px;
+    border-radius: 110px;
 }
 
 .icon svg {
@@ -43,7 +43,7 @@ h1 {
 }
 
 .btn {
-    background-color: #4CAF50;
+    background-color: #327634;
     color: white;
     padding: 15px;
     border: none;
@@ -54,11 +54,11 @@ h1 {
 }
 
 .btn:hover {
-    background-color:#218838;
+    background-color:#2a5a2c;
 }
 
 p {
     font-size: 0.9em;
-    color: #666;
+    color: #8E8E93;
     font-family: Arial, sans-serif;
 }
