--- a/src/app/components/info/info.component.css
+++ b/src/app/components/info/info.component.css
@@ -69,6 +69,16 @@ input, textarea {
     border: 1px solid #ccc;
 }
 
+textarea {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  resize: none;
+  background-color: #C6C2C0;
+}
+
 .payment-options {
     display: flex;
     justify-content: space-around;
