--- a/src/app/components/carrinho/carrinho.component.html
+++ b/src/app/components/carrinho/carrinho.component.html
@@ -40,7 +40,7 @@
       <span>R$ {{ total.toFixed(2) }}</span>
     </div>
 
-    <button class="botaoseguir">Prosseguir</button>
+    <button class="botaoseguir" (click)="navigateToInfo()">Prosseguir</button>
   </div>
 </body>
 </html>
