--- a/src/app/components/adicionais/adicionais.component.css
+++ b/src/app/components/adicionais/adicionais.component.css
@@ -1,5 +1,3 @@
-/* adicionais.component.css */
-
 body {
   font-family: Arial, sans-serif;
 }
@@ -11,25 +9,22 @@ body {
   border-radius: 8px;
   overflow: hidden;
   padding: 20px;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  text-align: center; /* Alinhando o conteúdo ao centro */
 }
 
 .voltar {
   font-size: 24px;
-    cursor: pointer;
-    background: none;
-    border: none;
-    margin-right: 16px;
-  
+  cursor: pointer;
+  background: none;
+  border: none;
+  margin-right: 16px;
 }
 
 header {
   display: flex;
   align-items: center;
-  justify-content: center; 
-  padding: 16px
+  justify-content: center; /* Alinhando o conteúdo ao centro */
+  padding: 16px;
 }
 
 header .voltar {
@@ -42,10 +37,11 @@ header .voltar {
 
 header h1 {
   font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    margin: 0;
-    flex-grow: 1;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto;
+  flex-grow: 1;
+  padding-right: 120px;
 }
 
 .produto-info {
@@ -65,6 +61,9 @@ header h1 {
 }
 
 .observacao {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
   padding: 16px;
   box-sizing: border-box;
 }
@@ -76,20 +75,31 @@ header h1 {
 }
 
 .observacao-textarea {
-  width: 100%;
-  height: 100px;
-  padding: 8px;
-  box-sizing: border-box;
-  border-radius: 4px;
+  width: 312px;
+  height: 120px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-size: 16px;
+  margin-bottom: 10px;
   resize: none;
+  background-color: #C6C2C0;
+  margin-left: 24px;
+}
+
+.observacao-label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+  text-align: left;
+  margin-left: 24px;
 }
 
 .quantidade-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; /* Alinhando ao centro */
   margin-top: 20px;
-  justify-content: flex-start;
 }
 
 .quantidade-btn {
@@ -109,53 +119,33 @@ header h1 {
 }
 
 .adicionar-btn {
-  width: 50%;
   padding: 10px;
   font-size: 16px;
+  width: 163px;
+  height: 45px;
   background-color: #327634;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   text-align: center;
-  margin-left: 50%;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto; /* Centralizando */
+  display: block;
 }
 
 .adicionar-btn:hover {
   background-color: #2a5a2c;
 }
 
-h1 {
-  text-align: center;
-  font-size: 36px;
-  flex-grow: 1;
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-.observacao-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  font-size: 16px;
-  margin-bottom: 10px;
-  resize: none;
-  background-color: #C6C2C0;
-}
-
-.observacao-label {
-  display: block;
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
 .lanche {
-  width: 95%;
-  padding: 10px;
+  width: 312px;
+  height: 195px;
   font-size: 16px;
   margin-bottom: 60px;
-  margin-right: 500px;
   margin-top: 70px;
-
+  align-items: center;
+  border-radius: 10px;
+  display: block;
 }
