--- a/src/app/components/adicionais/adicionais.component.css
+++ b/src/app/components/adicionais/adicionais.component.css
@@ -1,5 +1,7 @@
 body {
   font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -9,7 +11,9 @@ body {
   border-radius: 8px;
   overflow: hidden;
   padding: 20px;
-  text-align: center; /* Alinhando o conteúdo ao centro */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .voltar {
@@ -23,7 +27,6 @@ body {
 header {
   display: flex;
   align-items: center;
-  justify-content: center; /* Alinhando o conteúdo ao centro */
   padding: 16px;
 }
 
@@ -38,10 +41,9 @@ header .voltar {
 header h1 {
   font-size: 24px;
   font-weight: bold;
-  text-align: center;
-  margin: 0 auto;
   flex-grow: 1;
-  padding-right: 120px;
+  text-align: center;
+  margin: 0;
 }
 
 .produto-info {
@@ -55,9 +57,11 @@ header h1 {
 
 .produto-info img {
   width: 100%;
-  max-width: 300px;
+  max-width: 100%; 
+  height: auto; 
   border-radius: 8px;
-  margin-bottom: 16px;
+  margin-bottom: 54px;
+  box-sizing: border-box;
 }
 
 .observacao {
@@ -66,25 +70,27 @@ header h1 {
   align-items: center;
   padding: 16px;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .observacao label {
   display: block;
   margin-bottom: 8px;
   font-weight: bold;
+  justify-content: center;
 }
 
 .observacao-textarea {
-  width: 312px;
+  width: 100%;
+  max-width: 318px;
   height: 120px;
-  padding: 10px;
-  border: 1px solid #ddd;
+  padding: 40px;
+  border: 1px #ddd;
   border-radius: 8px;
   font-size: 16px;
   margin-bottom: 10px;
-  resize: none;
   background-color: #C6C2C0;
-  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .observacao-label {
@@ -98,7 +104,7 @@ header h1 {
 .quantidade-container {
   display: flex;
   align-items: center;
-  justify-content: center; /* Alinhando ao centro */
+  justify-content: center; 
   margin-top: 20px;
 }
 
@@ -111,6 +117,9 @@ header h1 {
   cursor: pointer;
   background: none;
   border: none;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin: 20px;
 }
 
 .quantidade {
@@ -119,10 +128,10 @@ header h1 {
 }
 
 .adicionar-btn {
-  padding: 10px;
-  font-size: 16px;
+  padding: 15px;
+  font-size: 15px;
   width: 163px;
-  height: 45px;
+  height: 49px;
   background-color: #327634;
   color: white;
   border: none;
@@ -130,8 +139,8 @@ header h1 {
   cursor: pointer;
   text-align: center;
   margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto; /* Centralizando */
+  margin-left: 90px;
+  margin-right: auto; 
   display: block;
 }
 
@@ -139,13 +148,8 @@ header h1 {
   background-color: #2a5a2c;
 }
 
-.lanche {
-  width: 312px;
-  height: 195px;
-  font-size: 16px;
-  margin-bottom: 60px;
-  margin-top: 70px;
-  align-items: center;
-  border-radius: 10px;
-  display: block;
+.produto-info h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-align: left;
 }
