--- a/src/app/components/info/info.component.css
+++ b/src/app/components/info/info.component.css
@@ -1,3 +1,8 @@
+body{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 .container {
     width: 100%;
     max-width: 400px;
@@ -40,7 +45,6 @@
       text-align: center;
       margin: 0;
       flex-grow: 1;
-      margin-bottom: 80px;
   }
   
   .voltar {
