--- a/src/app/components/cozinha/cozinha.component.css
+++ b/src/app/components/cozinha/cozinha.component.css
@@ -2,11 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #d9d9d9; /* Fundo #d9d9d9 */
-  color: #fff; /* Texto branco */
+  background-color: #d9d9d9; 
+  color: #fff;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Garante que o body ocupe toda a altura da tela */
+  min-height: 100vh; 
   overflow: hidden; 
 }
 
@@ -17,24 +17,24 @@ body {
 }
 
 .header {
-  background-color: #000; /* Fundo preto */
+  background-color: #000000; 
   color: #fff;
   text-align: center;
-  top: 0; /* Colando no topo */
+  top: 0; 
   z-index: 1000;
   height: 56.06px;
   display: flex;
-  align-items: center; /* Centraliza verticalmente */
-  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; 
+  justify-content: center; 
 }
 
 .header h1 {
-  margin: 0; /* Remove a margem padrão */
+  margin: 0; 
 }
 
 .pedido {
-  background-color: #fff; /* Caixa com fundo mais claro */
-  color: #000;
+  background-color: #fff; 
+  color: #000000;
   border-radius: 5px;
   padding: 15px;
   margin: 10px 0;
@@ -45,7 +45,7 @@ body {
   margin-bottom: 10px;
   padding-bottom: 1px;
   align-items: top;
-  text-align: center; /* Centraliza o texto do ID */
+  text-align: center; 
 }
 
 .pedido-item {
@@ -56,38 +56,37 @@ body {
 
 .item-nome {
   font-weight: regular;
-  text-align: center; /* Centraliza o texto */
-  font-size: 18px;
+  text-align: center; 
 }
 
 .item-descricao {
   font-size: 10px;
   font-style: italic;
   color: #706E6e;
-  text-align: center; /* Centraliza o texto */
+  text-align: center; 
 }
 
 .status-dropdown {
   position: relative;
   width: 262px;
   max-height: 300px;
-  margin: 0 auto; /* Centraliza o dropdown */
+  margin: 0 auto; 
   text-align: center;
 }
 
 .status-button {
-  background-color: #000; /* Botão dropdown com fundo preto */
+  background-color: #000000; 
   color: #fff;
   border: none;
   cursor: pointer;
   width: 238px;
   height: 30px;
-  margin: 0 auto; /* Centraliza o botão */
+  margin: 0 auto; 
   align-items: center;
-  justify-content: space-between; /* Adiciona espaço entre o texto e a seta */
-  padding: 0 10px; /* Adiciona espaço interno nas laterais */
-  white-space: nowrap; /* Garante que o texto não quebre a linha */
-  overflow: hidden; /* Esconde qualquer texto que ultrapasse os limites do botão */
+  justify-content: space-between; 
+  padding: 0 10px; 
+  white-space: nowrap; 
+  overflow: hidden; 
 }
 
 .dropdown-menu {
@@ -95,7 +94,7 @@ body {
   position: absolute;
   top: 100%;
   left: 50%;
-  transform: translateX(-50%); /* Centraliza o dropdown com o botão */
+  transform: translateX(-50%); 
   min-width: 238px;
 }
 
@@ -105,36 +104,36 @@ body {
 
 .dropdown-item {
   color: #fff;
-  padding: 10px 0; /* Adiciona espaço vertical interno */
+  padding: 10px 0; 
   display: flex;
-  align-items: center; /* Centraliza verticalmente */
-  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; 
+  justify-content: center; 
   text-decoration: none;
-  width: 100%; /* Garante que o item ocupe toda a largura */
+  width: 100%; 
   height: 30px;
-  white-space: nowrap; /* Garante que o texto não quebre a linha */
+  white-space: nowrap; 
 }
 
 .dropdown-item.feito {
-  background-color: red;
+  background-color: #F25C08;
 }
 
 .dropdown-item.enviado {
-  background-color: orange;
+  background-color: #FBCC28;
 }
 
 .dropdown-item.entregue {
-  background-color: green;
+  background-color: #3BBB1A;
 }
 
 .FEITO {
-  background-color: red;
+  background-color: #F25C08;
 }
 
 .ENVIADO {
-  background-color: orange;
+  background-color: #FBCC28;
 }
 
 .ENTREGUE {
-  background-color: green;
+  background-color: #3BBB1A;
 }
