--- a/src/app/components/dish-form/dish-form.component.html
+++ b/src/app/components/dish-form/dish-form.component.html
@@ -1,16 +1,28 @@
-<h2>{{ isEdit ? 'Edit Dish' : 'Add Dish' }}</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="dish-form.component.css">
+</head>
+<body>
+  <h2>{{ isEdit ? 'Cadastrar' : 'Add Dish' }}</h2>
 <form (ngSubmit)="saveDish()">
   <div>
-    <label for="name">Name</label>
+    <label for="name">Nome</label>
     <input type="text" id="name" [(ngModel)]="dish.name" name="name" required>
   </div>
   <div>
-    <label for="description">Description</label>
+    <label for="description">Valor</label>
     <input type="text" id="description" [(ngModel)]="dish.description" name="description" required>
   </div>
   <div>
-    <label for="price">Price</label>
+    <label for="price">Descição</label>
     <input type="number" id="price" [(ngModel)]="dish.price" name="price" required>
   </div>
-  <button type="submit">{{ isEdit ? 'Update' : 'Add' }}</button>
+  <button type="submit">{{ isEdit ? 'Confirmar' : 'Add' }}</button>
 </form>
+  
+</body>
+</html>
