--- a/src/app/components/dish-list/dish-list.component.css
+++ b/src/app/components/dish-list/dish-list.component.css
@@ -88,7 +88,7 @@ button:hover {
 .botao button {
   width: 312px;
   height: 45px;
-  background-color: #ff6600;
+  background-color: #F25C08;
   color: white;
   font-size: 16px;
   border: none;
