--- a/src/app/components/dish-list/dish-list.component.html
+++ b/src/app/components/dish-list/dish-list.component.html
@@ -21,7 +21,7 @@
       
       <div class="actions">
         <a [routerLink]="['/edit-dish', dish.id]">
-          <img src="ferramenta-lapis.png" alt="editar" class="lapis">
+          <img src="/assets/images/ferramenta-lapis.png" alt="editar" class="lapis">
         </a>
       </div>
       
