--- a/src/app/components/adicionais/adicionais.component.css
+++ b/src/app/components/adicionais/adicionais.component.css
@@ -51,13 +51,18 @@ header h1 {
 .produto-info h2 {
   font-size: 20px;
   margin-bottom: 10px;
+  text-align: left;
+  margin-left: 24px;
 }
 
 .produto-info img {
-  width: 100%;
-  max-width: 300px;
+  width: 320px;
+  height: 195px;
   border-radius: 8px;
   margin-bottom: 16px;
+  align-items: center;
+  margin-right: 24px;
+  
 }
 
 .observacao {
@@ -84,7 +89,7 @@ header h1 {
   margin-bottom: 10px;
   resize: none;
   background-color: #C6C2C0;
-  margin-left: 24px;
+  margin-left: 30px;
 }
 
 .observacao-label {
@@ -100,6 +105,7 @@ header h1 {
   align-items: center;
   justify-content: center; /* Alinhando ao centro */
   margin-top: 20px;
+  margin-left: 24px;
 }
 
 .quantidade-btn {
