--- a/src/app/components/cozinha/cozinha.component.css
+++ b/src/app/components/cozinha/cozinha.component.css
@@ -56,17 +56,19 @@ body {
 
 .item-nome {
   font-weight: regular;
+  font-family: "Roboto", sans-serif;
   text-align: left; /* Centraliza o texto */
   font-size: 18px;
   padding-left: 8px;
 }
 
-.item-descricao {
-  font-size: 10px;
-  font-style: italic;
+.item-observacao {
+  font-size: 12px;
+  font-family: "Poppins", sans-serif;
   color: #706E6e;
   text-align: left;
-  padding-left: 8px; /* Centraliza o texto */
+  padding-left: 8px; 
+  padding-top: 0px;/* Centraliza o texto */
 }
 
 .status-dropdown {
@@ -119,14 +121,14 @@ body {
 
 .dropdown-item {
   color: #fff;
-  padding: 10px 0; /* Adiciona espaço vertical interno */
+  padding: 5px 0; 
   display: flex;
-  align-items: center; /* Centraliza verticalmente */
-  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; 
+  justify-content: center; 
   text-decoration: none;
-  width: 100%; /* Garante que o item ocupe toda a largura */
+  width: 100%; 
   height: 30px;
-  white-space: nowrap; /* Garante que o texto não quebre a linha */
+  white-space: nowrap; 
 }
 
 .dropdown-item.feito {
