--- a/src/app/components/dish-form/dish-form.component.html
+++ b/src/app/components/dish-form/dish-form.component.html
@@ -1,16 +1,54 @@
-<h2>{{ isEdit ? 'Edit Dish' : 'Add Dish' }}</h2>
-<form (ngSubmit)="saveDish()">
-  <div>
-    <label for="name">Name</label>
-    <input type="text" id="name" [(ngModel)]="dish.name" name="name" required>
-  </div>
-  <div>
-    <label for="description">Description</label>
-    <input type="text" id="description" [(ngModel)]="dish.description" name="description" required>
-  </div>
-  <div>
-    <label for="price">Price</label>
-    <input type="number" id="price" [(ngModel)]="dish.price" name="price" required>
-  </div>
-  <button type="submit">{{ isEdit ? 'Update' : 'Add' }}</button>
-</form>
+<body>
+  <form (ngSubmit)="saveDish()">
+    <h2>{{ isEdit ? 'Editar' : 'Cadastrar' }}</h2>
+    
+   
+    <div style="position: relative; cursor: pointer;" (click)="triggerImageUpload()">
+      <img 
+        *ngIf="dish.image; else placeholder" 
+        [src]="dish.image" 
+        alt="Imagem do prato" 
+        style="width: 100%; border-radius: 10px; margin-bottom: 15px;" 
+      />
+
+     
+      <ng-template #placeholder>
+        <div 
+          style="width: 100%; height: 200px; background-color: #C6C2C0; border-radius: 10px; display: flex; justify-content: center; align-items: center; color: #aaa; font-size: 1em; margin-bottom: 15px;"
+        >
+        </div>
+      </ng-template>
+    </div>
+
+   
+    <input 
+      type="file" 
+      id="image" 
+      (change)="onImageSelected($event)" 
+      accept="image/*" 
+      style="display: none;" 
+      #fileInput 
+    />
+
+    
+    <div>
+      <label for="name">Nome</label>
+      <input type="text" id="name" [(ngModel)]="dish.name" name="name" required />
+    </div>
+
+   
+    <div>
+      <label for="description">Descrição</label>
+      <input type="text" id="description" [(ngModel)]="dish.description" name="description" required />
+    </div>
+
+   
+    <div>
+      <label for="price">Preços</label>
+      <input type="number" id="price" [(ngModel)]="dish.price" name="price" required />
+    </div>
+
+   
+    <button type="submit">{{ isEdit ? 'Confirmar' : 'Confirmar' }}</button>
+  </form>
+</body>
